home section done

--- a/index.html
+++ b/index.html
@@ -50,6 +50,22 @@
                 </div>
             </nav>
         </header>
+
+        
+        <main class="main">
+            <!-- ====== HOME ========== -->
+            <section class="home" id="home">
+                <div class="home_container bd-container bd-grid">
+                    <div class="home_data">
+                        <h1 class="home_title">Tasty food</h1>
+                        <h2 class="home_subtitle">Try the best food of <br>the week.</h2>
+                        <a href="#" class="btn">View Menu</a>
+                    </div>
+                    <img src="assets/img/home.png" alt="" class="home_img">
+                </div>
+            </section>
+
+        </main>
         <!-- ===== SCROLL REVEAL ====== -->
         <script src=" https://unpkg.com/scrollreveal"></script>
 
