about section done

--- a/index.html
+++ b/index.html
@@ -64,7 +64,17 @@
                     <img src="assets/img/home.png" alt="" class="home_img">
                 </div>
             </section>
-
+            <!-- ======== ABOUT SECTION ======= -->
+            <section class="about" id="about">
+                <div class="about_container  bd-grid">
+                    <div class="about_data">
+                        <span class="section_subtitle about_inital">About us</span>
+                        <h2 class="section_title about_inital">We cook the bes <br> tasty food</h2>
+                        <p class="about_description">We cook the best food in the entire city, with excellent customer service, the best meals and at the best price, visit us.</p>
+                    </div>
+                    <img src="assets/img/about.jpg" alt="" class="about_img">
+                </div>
+            </section>
         </main>
         <!-- ===== SCROLL REVEAL ====== -->
         <script src=" https://unpkg.com/scrollreveal"></script>
