fix : button padding

--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
                 </div>
             </section>
             <!-- ======== ABOUT SECTION ======= -->
-            <section class="about" id="about">
+            <section class="about bd-container" id="about">
                 <div class="about_container  bd-grid">
                     <div class="about_data">
-                        <span class="section_subtitle about_inital">About us</span>
-                        <h2 class="section_title about_inital">We cook the bes <br> tasty food</h2>
-                        <p class="about_description">We cook the best food in the entire city, with excellent customer service, the best meals and at the best price, visit us.</p>
+                        <h4 class="section_subtitle about_inital">About us</h4>
+                        <h2 class="section_title about_inital">We cook the best <br> tasty food</h2>
+                        <p class="about_description">We cook the best food in the entire 
+                            city, with excellent customer service, the best meals and at the best price, visit us.</p>
+                            <a href="#" class="btn">Explore Now</a>
                     </div>
                     <img src="assets/img/about.jpg" alt="" class="about_img">
                 </div>
