--- a/index.html
+++ b/index.html
@@ -278,7 +278,34 @@
                         <p class="services_description">We offer our clients excellent quality services for many years, with the best and delicious food in the city.</p>
                     </div>
                 </div>
-               
+            </section>
+            <!-- ======== MENU ============= -->
+            <section class="section menu bd-container" id="menu">
+                <h3 class="section_subtitle">Special</h3>
+                <h3 class="section_title">Menu of the week</h3>
+                <div class="menu_container bd-grid">
+                    <div class="menu_content">
+                        <img src="assets/img/plate1.png" alt="" class="menu_img">
+                        <h3 class="menu_name">Barbucue salad</h3>
+                        <span class="menu_detail">delicious dish</span>
+                        <span class="menu_price">$22.00</span>
+                        <a href="" class="btn menu_button"><i class="bx bx-cart-alt"></i></a>
+                    </div>
+                    <div class="menu_content">
+                        <img src="assets/img/plate2.png" alt="" class="menu_img">
+                        <h3 class="menu_name">Barbucue salad</h3>
+                        <span class="menu_detail">delicious dish</span>
+                        <span class="menu_price">$22.00</span>
+                        <a href="" class="btn menu_button"><i class="bx bx-cart-alt"></i></a>
+                    </div>
+                    <div class="menu_content">
+                        <img src="assets/img/plate3.png" alt="" class="menu_img">
+                        <h3 class="menu_name">Barbucue salad</h3>
+                        <span class="menu_detail">delicious dish</span>
+                        <span class="menu_price">$22.00</span>
+                        <a href="" class="btn menu_button"><i class="bx bx-cart-alt"></i></a>
+                    </div>
+                </div>
             </section>
         </main>
         <!-- ===== SCROLL REVEAL ====== -->
