add css for menu item

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 </div>
             </nav>
         </header>
-
-        
+<!-- ======== Main ============== -->
         <main class="main">
+
             <!-- ====== HOME ========== -->
             <section class="home" id="home">
                 <div class="home_container bd-container bd-grid">
@@ -64,6 +64,7 @@
                     <img src="assets/img/home.png" alt="" class="home_img">
                 </div>
             </section>
+
             <!-- ======== ABOUT SECTION ======= -->
             <section class=" section about bd-container" id="about">
                 <div class="about_container  bd-grid">
@@ -77,6 +78,7 @@
                     <img src="assets/img/about.jpg" alt="" class="about_img">
                 </div>
             </section>
+
             <!-- ========= SERVICES ============ -->
             <section class="section services bd-container" id="services">
                 <h4 class="section_subtitle">Offering</h4>
@@ -283,7 +285,7 @@
             <!-- ======== MENU ============= -->
             <section class="section menu bd-container" id="menu">
                 <h3 class="section_subtitle">Special</h3>
-                <h3 class="section_title">Menu of the week</h3>
+                <h2 class="section_title">Menu of the week</h2>
                 <div class="menu_container bd-grid">
                     <div class="menu_content">
                         <img src="assets/img/plate1.png" alt="" class="menu_img">
