css add : App download section

--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
             <section class="section menu bd-container" id="menu">
                 <h3 class="section_subtitle">Special</h3>
                 <h2 class="section_title">Menu of the week</h2>
+
                 <div class="menu_container bd-grid">
                     <div class="menu_content">
                         <img src="assets/img/plate1.png" alt="" class="menu_img">
@@ -294,6 +295,7 @@
                         <span class="menu_price">$22.00</span>
                         <a href="" class="btn menu_button"><i class="bx bx-cart-alt"></i></a>
                     </div>
+
                     <div class="menu_content">
                         <img src="assets/img/plate2.png" alt="" class="menu_img">
                         <h3 class="menu_name">Barbucue salad</h3>
@@ -301,6 +303,7 @@
                         <span class="menu_price">$22.00</span>
                         <a href="" class="btn menu_button"><i class="bx bx-cart-alt"></i></a>
                     </div>
+
                     <div class="menu_content">
                         <img src="assets/img/plate3.png" alt="" class="menu_img">
                         <h3 class="menu_name">Barbucue salad</h3>
@@ -308,7 +311,23 @@
                         <span class="menu_price">$22.00</span>
                         <a href="" class="btn menu_button"><i class="bx bx-cart-alt"></i></a>
                     </div>
+
                 </div>
+            </section>
+
+            <!-- =========APP ========= -->
+            <section class="section app bd-container" id="app">
+               <div class="app_data">
+                   <h3 class="section_subtitle">App</h3>
+                   <h2 class="section_title">App is Available </h2>
+                   <p class="app_description"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia, ab.</p>
+
+                   <div class="app_stores">
+                       <a href="#"><img src="assets/img/app1.png" alt="" class="app_store"></a>
+                       <a href="#"><img src="assets/img/app2.png" alt="" class="app_store"></a>
+                 </div>
+                 <img src="assets/img/movil-app.png" alt="" class="app_img">
+               </div>
             </section>
         </main>
         <!-- ===== SCROLL REVEAL ====== -->
