mark up: Contact us section

--- a/index.html
+++ b/index.html
@@ -329,6 +329,20 @@
                  <img src="assets/img/movil-app.png" alt="" class="app_img">
                </div>
             </section>
+
+            <!--========== CONTACT ==============-->
+            <section class="section contact bd-container" id="contact">
+                <div class="contact_container bd-grid">
+                    <div class="contact_data">
+                        <h3 class="section_subtitle"> Let's talk</h3>
+                        <h2 class="section_title">Contact us</h2>
+                        <p class="contact_description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, molestiae!</p>
+                    </div>
+                    <div class="contact_button">
+                        <a href="#" class="btn">Contact us now</a>
+                    </div>
+                </div>
+            </section>
         </main>
         <!-- ===== SCROLL REVEAL ====== -->
         <script src=" https://unpkg.com/scrollreveal"></script>
