--- a/index.html
+++ b/index.html
@@ -343,6 +343,62 @@
                     </div>
                 </div>
             </section>
+
+            <!-- ======== FOOTER ============-->
+            <footer class="section bd-container footer">
+                <div class="footer_container bd-grid">
+
+                    <div class="footer_content">
+                        <a href="#" class="footer_logo">Tasty Fodd</a>
+                        <span class="footer_description">Restaurant</span>
+                        <div>
+                            <a href="#" class="footer_social"><i class='bx bxl-facebook'></i></a>
+                            <a href="#" class="footer_social"><i class="bx bxl-twitter"></i></a>
+                            <a href="#" class="footer_social"><i class="bx bxl-instagram"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="footer_content">
+                        <h3 class="footer_title">Services</h3>
+                        <ul>
+                            <li><a href="#" class="footer_link">Delivery</a></li>
+                            <li><a href="#" class="footer_link">Pricing</a></li>
+                            <li><a href="#" class="footer_link">Fast Food</a></li>
+                            <li><a href="#" class="footer_link">Reserve your spot</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer_content">
+                        <h3 class="footer_title"></h3>
+                        <ul>
+                            <li><a href="#" class="footer_link">Delivery</a></li>
+                            <li><a href="#" class="footer_link">Pricing</a></li>
+                            <li><a href="#" class="footer_link">Fast Food</a></li>
+                            <li><a href="#" class="footer_link">Reserve your spot</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer_content">
+                        <h3 class="footer_title">Information</h3>
+                        <ul>
+                            <li><a href="#" class="footer_link">Event</a></li>
+                            <li><a href="#" class="footer_link">Contact us</a></li>
+                            <li><a href="#" class="footer_link">Privacy policy</a></li>
+                            <li><a href="#" class="footer_link">Terms of services</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer_content">
+                        <h3 class="footer_title">Address</h3>
+                        <ul>
+                            <li>Dhaka - Bangladesh</li>
+                            <li>222 , South Avenu</li>
+                            <li>111 - 999 - 777</li>
+                            <li>tastyfood@gmail.com</li>
+                    </div>
+                </div>
+                <p class="footer_copy">&#169; 2020 TastyFood . All right reserve</p>
+            </footer>
         </main>
         <!-- ===== SCROLL REVEAL ====== -->
         <script src=" https://unpkg.com/scrollreveal"></script>
