--- a/index.html
+++ b/index.html
@@ -369,16 +369,6 @@
                     </div>
 
                     <div class="footer_content">
-                        <h3 class="footer_title"></h3>
-                        <ul>
-                            <li><a href="#" class="footer_link">Delivery</a></li>
-                            <li><a href="#" class="footer_link">Pricing</a></li>
-                            <li><a href="#" class="footer_link">Fast Food</a></li>
-                            <li><a href="#" class="footer_link">Reserve your spot</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="footer_content">
                         <h3 class="footer_title">Information</h3>
                         <ul>
                             <li><a href="#" class="footer_link">Event</a></li>
@@ -397,7 +387,7 @@
                             <li>tastyfood@gmail.com</li>
                     </div>
                 </div>
-                <p class="footer_copy">&#169; 2020 TastyFood . All right reserve</p>
+                <p class="footer_copy">&#169; 2020 <span><a>TastyFood</a></span> . All right reserve</p>
             </footer>
         </main>
         <!-- ===== SCROLL REVEAL ====== -->
