add scroll top button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <link rel="stylesheet" href="/assets//css/style.css">
     </head>
     <body>
+        <!-- ========== SCROLL TOP =========== -->
+        <a href="#" class="scrolltop" id="scrolltop">
+            <i class="bx bx-chevron-up scrolltop_icon"></i> 
+        </a>
         
         <!-- ============ HEADER============ -->
         <header class="header" id="header">
