activate scroll reveal plugin

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                         <h2 class="section_title text_inital">App is Available </h2>
                         <p class="app_description text_inital"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia, ab.</p>
      
-                        <div class="app_stores">
+                        <div class="app_stores text_inital">
                             <a href="#"><img src="assets/img/app1.png" alt="" class="app_store"></a>
                             <a href="#"><img src="assets/img/app2.png" alt="" class="app_store"></a>
                          </div>
