mark up and css for light and dark theme button

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                         <li class="nav_item">
                             <a href="#contact" class="nav_link">Contact us</a>
                         </li>
+                        <li><i class="bx bx-moon change_theme" id="theme_button"></i></li>
                     </ul>
                 </div>
                 <div class="nav_toggle" id="nav_toggle">
